[gd_scene load_steps=18 format=3 uid="uid://bvgt7vpp3yy17"]

[ext_resource type="Script" path="res://Scripts/Collectables/SpeedPotion.gd" id="1_p3q1x"]
[ext_resource type="Texture2D" uid="uid://bex0s7s7h0lj" path="res://PirateSprite/Sprites/Interactable/Potion/Potion Effect/01.png" id="3_gwkku"]
[ext_resource type="Texture2D" uid="uid://c7pac67gertie" path="res://PirateSprite/Sprites/Interactable/Potion/Potion Effect/02.png" id="4_255rl"]
[ext_resource type="Texture2D" uid="uid://6g0niphmm7gy" path="res://PirateSprite/Sprites/Interactable/Potion/Potion Effect/03.png" id="5_sqo11"]
[ext_resource type="Texture2D" uid="uid://bkvrwfuv1sjcy" path="res://PirateSprite/Sprites/Interactable/Potion/Potion Effect/04.png" id="6_jnots"]
[ext_resource type="Texture2D" uid="uid://bryne6u86p6r2" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/01.png" id="7_gga22"]
[ext_resource type="AudioStream" uid="uid://d3e0okgprg3k7" path="res://PirateSprite/Sounds/SoundEffect/1up/WAV/1up 3 - Sound effects Pack 2.wav" id="7_jjlaw"]
[ext_resource type="Texture2D" uid="uid://d2iidlaal4qwg" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/02.png" id="8_2aqys"]
[ext_resource type="Texture2D" uid="uid://c3j2um42k51nm" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/03.png" id="9_4n8ji"]
[ext_resource type="Texture2D" uid="uid://df02dgn15e481" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/04.png" id="10_ow54g"]
[ext_resource type="Texture2D" uid="uid://bajgcrovc3bmd" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/05.png" id="11_7mhb6"]
[ext_resource type="Texture2D" uid="uid://b3jkmpsl7m8r7" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/06.png" id="12_d8phu"]
[ext_resource type="Texture2D" uid="uid://chgrnuuapy8xt" path="res://PirateSprite/Sprites/Interactable/Potion/Blue Potion/07.png" id="13_5gwmn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8orb"]
size = Vector2(14, 18)

[sub_resource type="Animation" id="Animation_qyfkn"]
resource_name = "Get"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blue:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_gwkku"), ExtResource("4_255rl"), ExtResource("5_sqo11"), ExtResource("6_jnots")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Get")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_jjlaw")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_tx4x3"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blue:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_gga22"), ExtResource("8_2aqys"), ExtResource("9_4n8ji"), ExtResource("10_ow54g"), ExtResource("11_7mhb6"), ExtResource("12_d8phu"), ExtResource("13_5gwmn")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxhwh"]
_data = {
"Get": SubResource("Animation_qyfkn"),
"Idle": SubResource("Animation_tx4x3")
}

[node name="SpeedPotion" type="Node2D"]
script = ExtResource("1_p3q1x")

[node name="Blue" type="Sprite2D" parent="."]
texture = ExtResource("3_gwkku")

[node name="Getbox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Getbox"]
shape = SubResource("RectangleShape2D_a8orb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_rxhwh")
}

[node name="Get" type="AudioStreamPlayer2D" parent="."]
volume_db = 18.0
bus = &"Sfx"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="area_entered" from="Getbox" to="." method="_on_getbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
